--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "db:seed" : "firebase firestore:delete --all-collections --yes && node firestoreImport"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "dayjs": "^1.11.10",
+    "firebase": "^8.4.1",
+    "nprogress": "^0.2.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,6 +30,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "firestore-export-import": "^1.4.0",
     "prettier": "^2.4.1"
   },
   "browserslist": [
