--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "db:seed" : "firebase firestore:delete --all-collections --yes && node firestoreImport"
+    "db:seed": "firebase firestore:delete --all-collections --yes && node firestoreImport"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@hennge/vue3-pagination": "^1.0.17",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.10",
     "firebase": "^8.4.1",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
