--- a/firestore.indexes.json.example
+++ b/firestore.indexes.json.example
@@ -1,4 +1,5 @@
 {
+  // Required, specify compound indexes
   "indexes": [
     {
       "collectionGroup": "posts",
@@ -10,10 +11,12 @@
     }
   ],
 
+  // Optional, disable indexes or enable single-field collection group indexes
   "fieldOverrides": [
     {
       "collectionGroup": "posts",
       "fieldPath": "text",
+      // We want to disable indexing on our big map field, and so empty the indexes array
       "indexes": []
     }
   ]
