--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@hennge/vue3-pagination": "^1.0.17",
+    "@vee-validate/i18n": "^4.4.7",
+    "@vee-validate/rules": "^4.4.7",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.10",
     "firebase": "^8.4.1",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
+    "vee-validate": "^4.4.11",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
